--- a/11/index.html
+++ b/11/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>api</title>
-</head>
-<body>
-    <h1>api</h1>
-    <input type="text" id="query" placeholder="검색어를 입력하세요" />
-    <button type="button" id="searchButton">검색</button>
-    <hr />
-    <div id="docs"></div>
-    <script src="app.js"></script>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>api</title>
+    </head>
+    <body>
+        <h1>API</h1>
+        <form id="searchForm">
+            <input type="text" placeholder="검색어를 입력하세요" name="query" />
+            <button type="submit" id="searchButton">검색</button>
+        </form>
+        <hr />
+
+        <div id="result"></div>
+        <button type="button" id="moreBtn">더보기</button>
+        <script src="app.js"></script>
+    </body>
 </html>
